FIX: SP-4499 fix visible scroll bar in login page

--- a/kun-frontend/src/layouts/LoginLayout/LoginLayout.global.less
+++ b/kun-frontend/src/layouts/LoginLayout/LoginLayout.global.less
@@ -8,7 +8,7 @@
     position: relative;
     flex: 138 0 138px;
     max-height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
     background: #1a73e8;
 
     &__bg-img {
